--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,6 @@ html {
 }
 
 /* src/index.css */
-html {
-  font-family: 'Poppins', sans-serif;
-}
 
 html {
   background: #4B69FD;
@@ -22,12 +19,13 @@ html {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  justify-content: center;
 }
 
 section {
   width: 100%;
   text-align: center;
-  max-width: 900px;
+
 }
 
 h2 {
